# django-oapif-demo

./: .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.arm64.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
oapif_demo/: manage.py
oapif_demo/oapif_demo/: admin.py  apps.py  asgi.py  credentials.py  models.py  oapif.py  qgis.py  settings.py  urls.py  wsgi.py
oapif_demo/oapif_demo/fixtures/: data.json
oapif_demo/oapif_demo/management/commands/: bootstrap.py  generate_qgis_project.py  reset_fixture.py  reset_migrations.py
oapif_demo/oapif_demo/migrations/: 0001_initial.py
oapif_demo/oapif_demo/static/css/: style.css
oapif_demo/oapif_demo/static/qgis/: auth.xml  bees_dev.qgs
oapif_demo/oapif_demo/templates/admin/: index.html  login.html
oapif_demo/oapif_demo/templates/qgis/: auth.xml
qgis/: auth.xml  bees.qgs
